--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 body {
   text-align: center;
-  background-color: #283149;
+  background-color: #080a0e;
 }
 
 h1 {
   font-size: 5rem;
-  color: #DBEDF3;
+  color: #82c1d6;
   font-family: "Arvo", cursive;
-  text-shadow: 3px 0 #DA0463;
+  text-shadow: 3px 0 #2c282a;
 
 }
 
@@ -64,12 +64,12 @@ footer {
 
 .drum {
   outline: none;
-  border: 10px solid #404B69;
+  border: 5px solid #101010;
   font-size: 5rem;
-  font-family: 'Arvo', cursive;
+  font-family:'Times New Roman', Times, serif;
   line-height: 2;
   font-weight: 900;
-  color: #DA0463;
+  color: hsl(192, 66%, 52%);
   text-shadow: 3px 0 #DBEDF3;
   border-radius: 15px;
   display: inline-block;
